<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_700"
    >

    <Button
        android:id="@+id/btnSavePassword"
        android:layout_width="@dimen/margin90"
        android:layout_height="@dimen/margin40"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="@dimen/textSize14"
        android:background="@drawable/shape_btn_dialog"
        app:backgroundTint="@color/colorTypeNoteRecycler"
        android:layout_marginTop="@dimen/margin24"
        android:layout_marginBottom="@dimen/margin8"
        android:layout_marginStart="@dimen/margin8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <Button
        android:id="@+id/btnCancelPassword"
        android:layout_width="@dimen/margin90"
        android:layout_height="@dimen/margin40"
        android:background="@drawable/shape_btn_dialog"
        android:text="@string/cancel"
        android:textSize="@dimen/textSize14"
        android:textAllCaps="false"
        android:layout_marginEnd="@dimen/margin8"
        app:backgroundTint="@color/colorTypeNoteRecycler"
        app:layout_constraintBottom_toBottomOf="@+id/btnSavePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSavePassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightInput"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/name_folder"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize14"
            />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>