<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteNoteActivity"
    android:background="@color/purple_700"
    >
    <EditText
        android:id="@+id/editNote"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin48"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/type_something"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingStart="@dimen/margin4"
        android:maxLines="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editTitle"
        app:layout_constraintStart_toStartOf="@+id/editTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <ImageButton
        android:id="@+id/btnBackWrite"
        android:layout_width="@dimen/margin55"
        android:layout_height="@dimen/margin40"
        android:layout_marginStart="@dimen/margin16"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/shape_btn_dialog"
        android:backgroundTint="@color/colorTypeNoteRecycler"
        android:layout_marginTop="@dimen/margin48"
        />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin48"
        android:layout_marginEnd="@dimen/margin16"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:paddingStart="@dimen/margin4"
        android:hint="@string/title"
        android:textColor="@color/NameColorCategory"
        android:textColorHint="@color/NameColorCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnBackWrite"
        app:layout_constraintTop_toBottomOf="@+id/btnBackWrite" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginBottom="@dimen/margin32"
        android:clickable="true"
        android:src="@drawable/ic_baseline_color_lens_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/btnSaveWrite"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:background="@drawable/shape_btn_dialog"
        app:layout_constraintBottom_toBottomOf="@+id/btnBackWrite"
        app:layout_constraintEnd_toEndOf="@+id/editTitle"
        app:layout_constraintTop_toTopOf="@+id/btnBackWrite" />
</androidx.constraintlayout.widget.ConstraintLayout>