<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageUser"
        android:layout_width="@dimen/margin110"
        android:layout_height="@dimen/margin110"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/notes_first"
        app:civ_border_color="@color/black"
        app:civ_border_width="1.2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin16"
        android:layout_height="@dimen/heightInputCount"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:hint="@string/password"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:endIconMode="password_toggle"
        app:counterTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputDataRegister"
            android:layout_width="match_parent"
            android:inputType="number"
            android:textSize="@dimen/textSize14"
            android:textColor="@color/white"
            android:layout_height="@dimen/heightInput" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize16"
        app:layout_constraintEnd_toEndOf="@+id/imageUser"
        app:layout_constraintStart_toStartOf="@+id/imageUser"
        app:layout_constraintTop_toBottomOf="@+id/imageUser" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_btn_register"
        android:layout_marginBottom="@dimen/margin16"
        android:background="@drawable/shape_btn_register"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="@dimen/textSize14"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/margin52"
        android:layout_height="@dimen/margin52"
        android:layout_marginTop="@dimen/margin16"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>